--- a/package.json
+++ b/package.json
@@ -35,11 +35,15 @@
     "mini-css-extract-plugin": "^0.7.0",
     "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-apply": "^0.12.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.5.1"
+  },
+  "dependencies": {
+    "postcss-import": "^12.0.1"
   }
 }
